--- a/style.css
+++ b/style.css
@@ -34,3 +34,24 @@ footer {
   padding: 1rem;
   margin-top: 2rem;
 }
+
+.tour-liste {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.btn {
+  display: inline-block;
+  background: #2d3e50;
+  color: white;
+  padding: 10px;
+  text-decoration: none;
+  border-radius: 8px;
+  text-align: center;
+}
+
+.btn:hover {
+  background: #1a252f;
+}
