--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ nav a {
 
 nav a:hover {
   background: #1e293b;
-  color: white;
+  color: black;
 }
 
 /* Aktiver Link (manuell setzen mit aria-current) */
