--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ nav a:hover {
 /* Aktiver Link (manuell setzen mit aria-current) */
 nav a[aria-current="page"] {
   background: #334155;
-  color: white;
+  color: black;
 }
 
 /* === Buttons für Touren === */
@@ -62,7 +62,7 @@ nav a[aria-current="page"] {
 .btn {
   display: block;
   background: #0ea5e9;
-  color: white;
+  color: black;
   text-decoration: none;
   padding: 12px;
   border-radius: 8px;
@@ -111,4 +111,21 @@ h4 {
   font-weight: 600;        /* leicht fett */
   text-align: left;        /* linksbündig, passt gut für Details */
   line-height: 1.3;        /* angenehmes Zeilenmaß */
+}
+
+/*----------------------------------Download Button-----------------------------------*/
+.download-btn {
+  display: inline-block;
+  padding: 12px 24px;
+  background-color: #007BFF; /* Blau */
+  color: white;
+  text-decoration: none;
+  border-radius: 8px;
+  font-size: 16px;
+  font-family: Arial, sans-serif;
+  transition: background-color 0.3s;
+}
+
+.download-btn:hover {
+  background-color: #0056b3; /* dunkleres Blau beim Hover */
 }
