--- a/style.css
+++ b/style.css
@@ -20,12 +20,9 @@ header {
 /* ======================= große Überschrift ======================= */
 header h1 {
   margin: 0 0 15px;
-  font-size: 1.8rem;
-}
-h1 {
-  color: white;                 /* Schriftfarbe */
-  -webkit-text-stroke: 2px black; /* Kontur: 1px dick, schwarz */
-  font-size: 3rem;
+  font-size: 2rem;                 /* größere Schrift */
+  color: white;                     /* Schriftfarbe */
+  -webkit-text-stroke: 2px black;  /* schwarze Kontur */
 }
 /* ======================= haupt Navigation ======================= */
 nav {
