--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header {
 /* ======================= große Überschrift mit Kontorfarbe ======================= */
 header h1 {
   margin: 0 0 15px;
-  font-size: 10rem;        /* Schriftgröße */
+  font-size: 3rem;        /* Schriftgröße */
   color: white;            /* Schriftfarbe */
   text-align: center;      /* optional, falls zentriert */
   
@@ -148,4 +148,26 @@ h4 {
   background-color: #0056b3; /* dunkleres Blau beim Hover */
 }
 
-/* ==================XXX ======================= */
+/* ================= Galerie Warscheneck ======================= */
+#gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+#gallery img {
+    width: 200px;
+    margin: 10px;
+    border-radius: 8px;
+    transition: transform 0.2s;
+}
+
+#gallery img:hover {
+    transform: scale(1.05);
+}
+
+.hidden {
+    display: none;
+}
+/* ================= XXX======================= */
