--- a/style.css
+++ b/style.css
@@ -17,6 +17,16 @@ header {
   padding: 100px 20px;           /* mehr Höhe für den Header */
   text-align: center;
 }
+/* ======================= Hintergrundbild im Header für Geisswand anpassen ======================= */
+body.geisswand header {
+  background-image: url('assets/Geisswand/Geisswand.jpg'); /* Pfad zu deinem Bild */
+  background-size: cover;       /* Bild füllt den gesamten Header aus */
+  background-position: center;  /* zentriert das Bild */
+  background-repeat: no-repeat; /* verhindert Wiederholung */
+  color: white;
+  padding: 100px 20px;           /* mehr Höhe für den Header */
+  text-align: center;
+}
 /* ======================= große Überschrift mit Kontorfarbe ======================= */
 header h1 {
   margin: 0 0 15px;
