--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* === Grundlayout === */
 body {
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Lora', sans-serif;
   line-height: 1.6;
   background: #fafafa;
   color: #333;
