--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body.katzenstein header {
 }
 /* ======================= große Überschrift mit Kontorfarbe ======================= */
 header h1 {
+	font-style: italic;
   margin: 0 0 15px;
   font-size: 3rem;        /* Schriftgröße */
   color: white;            /* Schriftfarbe */
